mentor timesheet view added

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,6 +49,7 @@
     "assignmentTrack": "Assignment Tracking",
     "announcement": "Announcement Management",
     "support": "Intern Support",
+    "timesheetReports": "Time Tracking",
     "admin": "Admin Panel",
     "about": "About",
     "language": "Language"
@@ -139,6 +140,16 @@
       "internAll": "Intern (All)",
       "statusAll": "Status (All)",
       "priorityAll": "Priority (All)"
+    },
+    "table": {
+      "name": "Task Name",
+      "desc": "Description",
+      "assigned": "Assigned",
+      "due": "Due",
+      "priority": "Priority",
+      "mentor": "Mentor",
+      "intern": "Intern",
+      "status": "Status"
     },
     "sort": {
       "assignedAt": "Assigned Date",
@@ -279,6 +290,40 @@
     "surname": "Surname",
     "expertise": "Area of Expertise",
     "submit": "Complete Registration"
+  },
+  "mentorTimesheet": {
+    "title": "Intern Time Tracking",
+    "selectIntern": "Select Intern",
+    "chooseIntern": "Choose an intern...",
+    "loadingInterns": "Loading interns...",
+    "selectInternToView": "Please select an intern",
+    "email": "Email",
+    "university": "University",
+    "department": "Department",
+    "period": "Internship Period",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "refresh": "Refresh",
+    "loadingData": "Loading data...",
+    "totalHours": "Total Hours",
+    "workingDays": "Working Days",
+    "activeTasks": "Active Tasks",
+    "avgDailyHours": "Daily Average",
+    "taskSummary": "Task Summary",
+    "taskName": "Task Name",
+    "priority": "Priority",
+    "status": "Status",
+    "lastActivity": "Last Activity",
+    "dailyDetails": "Daily Details",
+    "date": "Date",
+    "task": "Task",
+    "hours": "Hours",
+    "notes": "Notes",
+    "weeklyTrend": "Weekly Trend",
+    "noDataFound": "No data found",
+    "noDataSubtext": "No time logs found in the selected date range",
+    "loadError": "Error loading interns",
+    "dataLoadError": "Error loading intern data"
   },
   "officeInfo": {
     "loading": "Loading office information...",
